--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -58,8 +58,6 @@
 
 .archive {
 	div#content {
-		display: flex;
-    flex-direction: row;
 		width: 100%;
 		padding-top: 4%;
 	 } .page-title h1 {
@@ -163,4 +161,30 @@
 
 #search-field {
 	display: none;
+}
+
+// taxonomy pages
+
+.tax-product-type {
+	.page-header {
+		border-bottom: $dashed_border;
+    margin-bottom: 2%;
+		text-align: center;
+		font-size: 20px;
+		text-transform: uppercase;
+	} p {
+			font-family: $font_main;
+			font-size: $font_size;
+			font-weight: 100;
+			text-transform: none;
+  }
+}
+
+.tax-product-type {
+	.product-name {
+		.entry-title {
+			text-transform: none;
+			font-size: 16px;
+		}
+	}
 }
