--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -343,7 +343,7 @@ html {
           box-sizing: inherit; }
 
 body {
-  background: #fff;
+  background: #FFF;
   /* Fallback for when there is no custom background color defined. */ }
 
 blockquote, q {
@@ -682,13 +682,6 @@ a {
   display: flex; }
 
 .archive div#content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
   width: 100%;
   padding-top: 4%; }
 
@@ -778,6 +771,23 @@ a {
 
 #search-field {
   display: none; }
+
+.tax-product-type .page-header {
+  border-bottom: 1px dashed #c8c8c8;
+  margin-bottom: 2%;
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase; }
+
+.tax-product-type p {
+  font-family: "merriweather", Helvetica, serif;
+  font-size: 16px;
+  font-weight: 100;
+  text-transform: none; }
+
+.tax-product-type .product-name .entry-title {
+  text-transform: none;
+  font-size: 16px; }
 
 /*--------------------------------------------------------------
 # Media
@@ -1087,7 +1097,9 @@ li.storie-items {
       color: #FFF;
       padding: .75rem 1.5rem;
       text-decoration: none;
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      font-family: "nov", Arial, sans-serif;
+      font-size: .9rem; }
 
 #primary {
   padding-right: 5%;
@@ -1187,7 +1199,7 @@ li.storie-items {
   padding: 2%;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  color: #fff; }
+  color: #FFF; }
 
 .wood {
   width: 100%; }
@@ -1208,7 +1220,7 @@ li.storie-items {
     font-family: "nov", Arial, sans-serif;
     color: #d99054; }
   .contact-info a {
-    color: #fff;
+    color: #FFF;
     padding-left: 10px; }
   .contact-info i {
     color: white;
@@ -1270,7 +1282,7 @@ li.storie-items {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: #fff; }
+  color: #FFF; }
 
 .page-id-66 .site-content .entry-header #secondary {
   display: none; }
