--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -152,9 +152,9 @@
 	width: 100%;
 }
 
-// single product page using single-product
+// TODO single product page using single-product
 .product-template-default {
-	#content {
+ 	#content {
 	 
 	}
 }
@@ -187,4 +187,30 @@
 			font-size: 16px;
 		}
 	}
+}
+
+// Search results page
+
+.search-results {
+	.entry-summary {
+		p {
+			font-weight: 100;
+			line-height: 1.75em;
+			font-family: $font_main;
+		}
+	}
+	.page-header {
+		border-bottom: 1px solid #e1e1e1;
+    margin-bottom: 2%;
+		padding-bottom: 2%;
+		width: 100%;
+	} h2.entry-title {
+		font-family: $font_accent;
+		a {
+			color: $brand_color_green;
+			font-family: $font_accent;
+			font-size: 30px;
+			text-transform: uppercase;
+		}
+	} 
 }
