--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -214,3 +214,17 @@
 		}
 	} 
 }
+
+.read-more-button {
+	width: 100%;
+	margin-bottom: 2%;
+	a {
+		border: 1px solid #000;
+		color: #000;
+		padding: 1% 2%;
+		text-transform: uppercase;
+		font-family: $font_accent;
+		font-size: 16px;
+	}
+	
+}
