--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -769,6 +769,11 @@ a {
 #comments {
   width: 100%; }
 
+.product-template-default #content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+
 #search-field {
   display: none; }
 
