--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -939,6 +939,9 @@ li.storie-items {
   text-transform: uppercase;
   margin: 0px; }
 
+.home .site-content #primary {
+  padding: 0; }
+
 .home .site-content .posted-on .read a, .home .site-content a .read a {
   border: 1px solid #000;
   padding: 10px 20px;
@@ -1080,7 +1083,8 @@ li.storie-items {
           justify-content: center; }
 
 .home #content {
-  width: 1024px; }
+  width: initial;
+  margin-top: -1.5em; }
 
 .home .container {
   width: 1024px; }
@@ -1333,6 +1337,13 @@ li.storie-items {
 .page-id-66 .site-content .entry-header #secondary {
   display: none; }
 
+.page-id-5 #content {
+  width: initial; }
+
+.page-id-5 #primary {
+  padding: 0;
+  margin-top: -1.5em; }
+
 .entry-header h1 {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1340,7 +1351,9 @@ li.storie-items {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: #404040; }
+  color: white;
+  text-transform: uppercase;
+  font-size: 40px; }
 
 .custom-hero {
   width: auto;
