--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -228,3 +228,68 @@
 	}
 	
 }
+
+// comments section on journal page
+
+h2.comments-title {
+	font-size: 40px;
+}
+.comment-content {
+	font-family: $font_main;
+}
+
+.comment-author.vcard {
+ .fn {
+	font-weight: 700;
+ }
+}
+.comment-metadata {
+	color: grey;
+	a {
+		color: $brand_color_green;
+		font-size: 20px;
+	}
+}
+.comment-body {
+	border-bottom: $solid_border;
+	margin-bottom: 2%;
+}
+
+textarea {
+	color: #666;
+	background-color: #f4f4f4;
+	border: 1px solid #e1e1e1;
+	border-radius: 0;
+}
+
+.reply {
+		margin-bottom: 2%;
+	a.comment-reply-link {
+		color: $brand_color_green;
+		font-size: 20px;
+	}
+}
+.comment-reply-title {
+	font-size: 40px;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+}
+
+label {
+font-family: $font_accent;
+font-size: 20px;
+}
+
+input.submit {
+	font-family: $font-accent;
+	background-color: $brand_color_green;
+	border-radius: 0;
+	color: #FFF;
+	font-size: 20px;
+	font-weight: 100;
+	box-shadow: none;
+	text-shadow: none;
+	border: none;
+	text-transform: uppercase;
+	padding: 1% 2%;
+}
