--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -824,6 +824,60 @@ a {
     font-family: "nov", Arial, sans-serif;
     font-size: 16px; }
 
+h2.comments-title {
+  font-size: 40px; }
+
+.comment-content {
+  font-family: "merriweather", Helvetica, serif; }
+
+.comment-author.vcard .fn {
+  font-weight: 700; }
+
+.comment-metadata {
+  color: grey; }
+  .comment-metadata a {
+    color: #248A83;
+    font-size: 20px; }
+
+.comment-body {
+  border-bottom: 1px solid #e1e1e1;
+  margin-bottom: 2%; }
+
+textarea {
+  color: #666;
+  background-color: #f4f4f4;
+  border: 1px solid #e1e1e1;
+  border-radius: 0; }
+
+.reply {
+  margin-bottom: 2%; }
+  .reply a.comment-reply-link {
+    color: #248A83;
+    font-size: 20px; }
+
+.comment-reply-title {
+  font-size: 40px;
+  letter-spacing: 2px;
+  text-transform: uppercase; }
+
+label {
+  font-family: "nov", Arial, sans-serif;
+  font-size: 20px; }
+
+input.submit {
+  font-family: "nov", Arial, sans-serif;
+  background-color: #248A83;
+  border-radius: 0;
+  color: #FFF;
+  font-size: 20px;
+  font-weight: 100;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  text-shadow: none;
+  border: none;
+  text-transform: uppercase;
+  padding: 1% 2%; }
+
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
