targeted individual product pages to display flex

--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -153,7 +153,7 @@
 }
 
 // TODO single product page using single-product
-.product-template-default {
+.single-product {
  	#content {
 	 display: flex;
 	}
