--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -704,10 +704,12 @@ a {
     position: absolute;
     top: 20px;
     left: 0;
-    color: #f1f1f1; }
+    color: #f1f1f1;
+    width: 80%; }
     .archive .entry-header .entry-title a {
       color: #f1f1f1;
-      font-family: "nov", Arial, sans-serif; }
+      font-family: "nov", Arial, sans-serif;
+      font-size: 40px; }
   .archive .entry-header .entry-meta {
     background-color: #248A83;
     font-family: "nov", Arial, sans-serif;
@@ -715,7 +717,8 @@ a {
     text-align: center;
     position: absolute;
     right: 0;
-    bottom: 7px; }
+    bottom: 7px;
+    font-size: 16px; }
 
 .date div#content {
   -webkit-box-orient: horizontal;
@@ -1181,7 +1184,8 @@ li.storie-items {
 .home .container {
   width: 1024px; }
 
-.product-info.container h2 {
+.product-info.container {
+  width: 1024px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1191,16 +1195,28 @@ li.storie-items {
           flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center;
-  font-size: 40px;
-  text-transform: uppercase;
-  font-family: "nov", Arial, sans-serif;
-  font-weight: 300; }
+          align-items: center; }
+  .product-info.container h2 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 40px;
+    text-transform: uppercase;
+    font-family: "nov", Arial, sans-serif;
+    font-weight: 300; }
 
 .product-type-blocks {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  width: 1024px; }
   .product-type-blocks .product-type-block-wrapper {
     margin: 10px;
     padding: 10px;
@@ -1289,11 +1305,12 @@ li.storie-items {
       position: absolute;
       top: 20px;
       left: 0;
-      color: #f1f1f1; }
+      color: #f1f1f1;
+      width: 80%; }
       .blog .site-content .entry-header .entry-title a {
         color: #f1f1f1;
         font-family: "nov", Arial, sans-serif;
-        font-size: 20px;
+        font-size: 40px;
         padding: 2% 1%; }
     .blog .site-content .entry-header .entry-meta {
       background-color: #248A83;
@@ -1303,6 +1320,10 @@ li.storie-items {
       position: absolute;
       right: 0;
       bottom: 7px; }
+      .blog .site-content .entry-header .entry-meta time.entry-date.published {
+        color: #f1f1f1;
+        font-family: "nov", Arial, sans-serif;
+        font-size: 16px; }
 
 /* header */
 .search-icon {
@@ -1515,6 +1536,12 @@ p.p1 {
   font-family: "merriweather", Helvetica, serif;
   line-height: 1.5;
   font-size: 16px; }
+
+.archive .page-header {
+  width: 100%; }
+  .archive .page-header h1.page-title {
+    text-transform: uppercase;
+    border-bottom: 1px solid #e1e1e1; }
 
 .archive .site-content {
   display: -webkit-box;
