--- a/themes/inhabitent/sass/_forms.scss
+++ b/themes/inhabitent/sass/_forms.scss
@@ -8,16 +8,12 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	border: 1px solid;
-	border-color: #ccc #ccc #bbb;
-	border-radius: 3px;
-	background: #e6e6e6;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-	color: rgba(0, 0, 0, .8);
-	@include font-size(0.75);
-	line-height: 1;
-	padding: .6rem 1rem .4rem;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
+	padding: .75rem 1.5rem;
+	background-color: $brand_color_green;
+	color: white;
+	border-style: none;
+	font-family: $font_accent;
+	text-transform: uppercase;
 
 	&:hover {
 		border-color: #ccc #bbb #aaa;
@@ -54,6 +50,10 @@ input[type="url"],
 input[type="password"],
 input[type="search"] {
 	padding: 3px;
+	color: #666;
+	background-color: #f4f4f4;
+	border: 1px solid #e1e1e1;
+	border-radius: 0;
 }
 
 textarea {
