--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -395,18 +395,12 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-  border: 1px solid;
-  border-color: #ccc #ccc #bbb;
-  border-radius: 3px;
-  background: #e6e6e6;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-          box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-  color: rgba(0, 0, 0, 0.8);
-  font-size: 12px;
-  font-size: 0.75rem;
-  line-height: 1;
-  padding: .6rem 1rem .4rem;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8); }
+  padding: .75rem 1.5rem;
+  background-color: #248A83;
+  color: white;
+  border-style: none;
+  font-family: "nov", Arial, sans-serif;
+  text-transform: uppercase; }
   button:hover,
   input[type="button"]:hover,
   input[type="reset"]:hover,
@@ -448,7 +442,11 @@ input[type="email"],
 input[type="url"],
 input[type="password"],
 input[type="search"] {
-  padding: 3px; }
+  padding: 3px;
+  color: #666;
+  background-color: #f4f4f4;
+  border: 1px solid #e1e1e1;
+  border-radius: 0; }
 
 textarea {
   padding-left: 3px;
@@ -906,11 +904,44 @@ input.submit {
   text-transform: uppercase;
   padding: 1% 2%; }
 
-.single-post #wpcf7-f140-p45-o1 {
+span.cat-links {
+  text-transform: uppercase;
+  font-family: "nov", Arial, sans-serif;
+  font-size: 16px;
+  margin-left: 10px; }
+  span.cat-links a {
+    text-transform: uppercase;
+    font-family: "nov", Arial, sans-serif;
+    color: #248A83;
+    font-size: 16px; }
+
+span.tags-links {
+  text-transform: uppercase;
+  font-family: "nov", Arial, sans-serif;
+  font-size: 16px;
+  margin-left: 10px; }
+  span.tags-links a {
+    text-transform: uppercase;
+    font-family: "nov", Arial, sans-serif;
+    color: #248A83;
+    font-size: 16px; }
+
+.single-post div#wpcf7-f140-p51-o1 {
   width: 100%; }
 
 .single-post .nav-next {
   display: none; }
+
+.single-post .post-a-comment {
+  width: 100%;
+  text-transform: uppercase;
+  font-family: "nov", Arial, sans-serif; }
+
+.single-post .join-discussion {
+  width: 100%;
+  font-family: "merriweather", Helvetica, serif; }
+  .single-post .join-discussion p {
+    text-transform: none; }
 
 .single-post .site-content {
   margin: auto;
@@ -1314,7 +1345,8 @@ li.storie-items {
 
 #secondary {
   padding-left: 5%;
-  border-left: 1px solid #e9e9e9; }
+  border-left: 1px solid #e9e9e9;
+  padding-top: 4%; }
 
 .widget-title {
   text-transform: uppercase;
