--- a/themes/inhabitent/sass/_forms.scss
+++ b/themes/inhabitent/sass/_forms.scss
@@ -9,16 +9,16 @@ input[type="button"],
 input[type="reset"],
 input[type="submit"] {
 	padding: .75rem 1.5rem;
-	background-color: $brand_color_green;
-	color: white;
 	border-style: none;
 	font-family: $font_accent;
 	text-transform: uppercase;
+	color: black;
 
 	&:hover {
-		border-color: #ccc #bbb #aaa;
-		box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
-	}
+		background-color: $brand_color_green;
+		color: white;
+		border: none;
+  }
 
 	&:active,
 	&:focus {
@@ -59,4 +59,30 @@ input[type="search"] {
 textarea {
 	padding-left: 3px;
 	width: 100%;
+}
+
+// social-media-buttons
+
+.social-media-journal {
+	width: 100%;
+
+}
+.facebook {
+	background-color: white;
+	border: 1px solid black;
+	
+}
+
+button.twitter {
+	font-family: $font_accent;
+	background-color: white;
+	border: 1px solid black;
+}
+.button.pinterest {
+	font-family: $font_accent;
+	background-color: white;
+	border: 1px solid black;
+}
+.nav-previous {
+display: none;
 }
