Added hover animation to appropriate buttons and fixed some fonts around the website

--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -234,13 +234,25 @@
 		padding: 1% 2%;
 		text-transform: uppercase;
 		font-family: $font_accent;
+		background-color: white;
 		font-size: 16px;
+		&:hover {
+      background-color: $brand_color_green;
+      color: white;
+			border: none;
+		}
 	}
 	
 }
 
 // comments section on journal page
-
+span.comments-link {
+	a {
+		color: #f1f1f1;
+		font-family: $font_accent;
+		font-size: 16px;
+	}
+}
 h2.comments-title {
 	font-size: 40px;
 }
