--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -471,6 +471,15 @@ button.twitter {
 .nav-previous {
   display: none; }
 
+.wpcf7-form-control.wpcf7-submit {
+  border: none;
+  background-color: #248A83;
+  color: white; }
+  .wpcf7-form-control.wpcf7-submit:hover {
+    background-color: #404040;
+    color: white;
+    border: none; }
+
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
@@ -832,7 +841,17 @@ a {
     padding: 1% 2%;
     text-transform: uppercase;
     font-family: "nov", Arial, sans-serif;
+    background-color: white;
     font-size: 16px; }
+    .read-more-button a:hover {
+      background-color: #248A83;
+      color: white;
+      border: none; }
+
+span.comments-link a {
+  color: #f1f1f1;
+  font-family: "nov", Arial, sans-serif;
+  font-size: 16px; }
 
 h2.comments-title {
   font-size: 40px; }
@@ -1130,12 +1149,11 @@ li.storie-items {
     font-family: "nov", Arial, sans-serif;
     text-transform: uppercase;
     padding: 2% 3%;
-    -webkit-transition: all .2s;
-    transition: all .2s;
     background-color: transparent; }
-    .adventure-section a.read-more a.read-more:hover {
-      background-color: #248A83;
-      border: 1px solid #248A83; }
+    .adventure-section a.read-more:hover {
+      background-color: #404040;
+      color: white;
+      border: none; }
 
 .canoe {
   grid-column: 1/3;
@@ -1200,7 +1218,9 @@ li.storie-items {
     font-family: "nov", Arial, sans-serif;
     color: white;
     font-size: 20px;
-    margin-left: 10%; }
+    margin-left: 5.5%; }
+    .more-adventures a:hover {
+      background-color: #404040; }
 
 .inhabitent-journal-title, h2.inhabitent-adventures {
   text-transform: uppercase;
@@ -1246,8 +1266,9 @@ li.storie-items {
       -ms-flex-pack: center;
           justify-content: center; }
 
-.home .site-header .tent {
-  display: none; }
+.home .site-header .white-tent {
+  width: 50px;
+  margin-left: 70px; }
 
 .home .site-header .main-navigation {
   border: none;
@@ -1255,18 +1276,15 @@ li.storie-items {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  background-image: url(../../images/inhabitent-logo-tent-white.svg);
-  background-size: 50px 33px;
-  background-repeat: no-repeat;
-  border: none;
-  background-color: transparent;
-  background-position-x: 2%; }
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border: none; }
   .home .site-header .main-navigation a {
     color: white;
     text-shadow: 1px 1px 2px #323232; }
+    .home .site-header .main-navigation a:hover {
+      color: #d99054; }
 
 .home #content {
   width: initial;
@@ -1546,14 +1564,17 @@ li.storie-items {
 .page-id-66 .site-content .entry-header #secondary {
   display: none; }
 
+.page-id-5 .site-header .white-tent {
+  width: 50px;
+  margin-left: 70px; }
+
 .page-id-5 .site-header .main-navigation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  background-image: url(../../images/inhabitent-logo-tent-white.svg);
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   background-size: 50px 33px;
   background-repeat: no-repeat;
   border: none;
@@ -1562,8 +1583,6 @@ li.storie-items {
   .page-id-5 .site-header .main-navigation a {
     color: white;
     text-shadow: 1px 1px 2px #323232; }
-  .page-id-5 .site-header .main-navigation .tent {
-    display: none; }
 
 .page-id-5 #content {
   width: initial; }
@@ -1685,7 +1704,10 @@ p.p1 {
 .product-name {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex; }
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
   .product-name h2.entry-title {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
@@ -1716,7 +1738,7 @@ p.p1 {
     margin: 10px; }
   .product-container img {
     border-bottom: 4px solid #e1e1e1;
-    height: 50%;
+    height: 80%;
     max-height: 200px; }
 
 article#post-96,
