--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -98,6 +98,9 @@ ul {
 		font-family: $font_accent;
 		text-transform: uppercase;
 		font-size: 16px;
+		&:hover {
+      color: #404040;
+    }
 	}
 
 	.current_page_item > a,
